--- a/packages/nicolium/src/styles/new/components.scss
+++ b/packages/nicolium/src/styles/new/components.scss
@@ -245,7 +245,7 @@
     min-width: 1.25rem;
     height: 1.25rem;
 
-    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
     white-space: nowrap;
   }
 }
@@ -332,7 +332,7 @@
 
     > :first-child {
       color: rgb(var(--color-gray-900));
-      overflow-wrap: break-word;
+      overflow-wrap: anywhere;
 
       .dark & {
         color: rgb(var(--color-gray-100));
