--- a/packages/nicolium/src/styles/new/statuses.scss
+++ b/packages/nicolium/src/styles/new/statuses.scss
@@ -626,7 +626,7 @@
   position: relative;
   color: rgb(var(--color-gray-900));
   text-overflow: ellipsis;
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
 
   &:focus {
     outline: 2px solid transparent;
